<resources>
    <string name="app_name">Oxygen</string>
    <string name="iniciarsesion">Iniciar sesión con google</string>
    <string name="txt_estacion">Estaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_añadirEstacion">Añadir estación</string>
    <string name="nombre">  Nombre de la estación</string>
    <string name="descripcion_estacion">  Descripción</string>
    <string name="btn_agregarUbicacion"> Añadir ubicación (opcional)</string>
    <string name="btn_agregarEstacion">Agregar estación</string>
    <string name="descripcionVolumen">Volumen total de oxígeno contenido en el tanque:</string>
    <string name="volumen">Volúmen</string>
    <string name="detalle">*Ubicar tanque de oxigeno sobre la estación antes</string>
    <string name="desarrollado_por_k_lopez_e_martinez_y_j_pinargote">Desarrollado por K. Lopez, E. Martinez y J. Pinargote</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="codigo">Código del módulo</string>

    <string name="user_name">Nombre de usuario</string>
    <string name="txt_email">emailusuario@correo.com</string>


    <string name="nombre_estacion">Estación 1</string>
    <string name="infor_estacion">Piso 1 - Hospital Guayaquil</string>
    <string name="porcentaje_volumen">60%</string>

    <string name="txt_volInicial">Volúmen inicial:</string>
    <string name="txt_volActual">Volúmen actual:</string>
    <string name="txt_ubicacion">Ubicación:</string>
    <string name="txt_piso">Piso:</string>
    <string name="txt_habitacion">Habitación:</string>
    <string name="txt_prctBateria">Batería:</string>
    <string name="editar"> Editar estación</string>
    <string name="habAddEstacion">Ubicacion</string>
    <string name="pisoAddegarEstacion">Piso</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="ubicacionTanque">"Ver Ubicacion "</string>
    <string name="habitacion">Habitacion</string>
    <string name="obtenerUbicacion">Obtener Ubicacion</string>

</resources>