<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ProfileFragment">

    <ImageView
        android:id="@+id/imv_foto"
        android:layout_width="204dp"
        android:layout_height="202dp"
        tools:srcCompay="@tools:sample/avatars"
        android:layout_gravity="center"
        >

    </ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_user"
        android:gravity="center"
        android:text="@string/user_name"
        android:textSize="30sp"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/txt_email"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/txt_email"
        >

    </TextView>

    <Button
        android:id="@+id/btn_CerrarS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="151dp"
        android:text="@string/cerrar_sesion"
        android:layout_gravity="center"
        />


</LinearLayout>