<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_agregarEstacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2F2"
    tools:context=".AgregarEstacionFragment">

    <TextView
        android:id="@+id/txt_estacion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txt_añadirEstacion"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_name_estacion"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/txt_estacion2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/fondo_informacion"
        android:drawableLeft="@drawable/ic_baseline_blur_on_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txt_name_estacion2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/contenedor_descipcion"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/fondo_informacion"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/btn_agregarUbicacion"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/txt_name_estacion3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/divider"
        android:layout_toLeftOf="@+id/divider"
        android:background="@drawable/fondo_informacion"
        android:drawableLeft="@drawable/ic_baseline_group_work_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/volumen"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/contenedor_descipcion"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_below="@+id/txt_name_estacion"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp">

        <EditText
            android:id="@+id/txt_descripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_informacion"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/descripcion_estacion"
            android:inputType="textPersonName"
            android:maxLines="4"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_agregarEstacion"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/txt_name_estacion3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/boton_redondo"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_agregarEstacion"
        android:textColor="@color/cardview_light_background"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name_estacion2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/descripcionVolumen"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_agregarEstacion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/detalle"
        android:textSize="9sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/listDivider"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/spn_unidad"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_toEndOf="@+id/divider"
        android:layout_toRightOf="@+id/divider"
        android:background="@drawable/style_spinner"
        android:paddingLeft="15dp" />

</RelativeLayout>