<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/formulario"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/creditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:fontFamily="@font/poppins"
        android:text="@string/desarrollado_por_k_lopez_e_martinez_y_j_pinargote"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/formulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:background="?attr/editTextBackground"
            android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="Usuario"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/pasword"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:background="?attr/editTextBackground"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/btn_celeste"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ingresar"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_iniciarsesion"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/btn_plomo_darker"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:fontFamily="@font/poppins_medium"
            android:onClick="iniciarsesion"
            android:paddingLeft="7dp"
            android:paddingRight="12dp"
            android:text="@string/iniciarsesion"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="?attr/editTextBackground"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:onClick="registrarse"
            android:paddingBottom="5dp"
            android:text="@string/registrarse"
            android:textSize="12sp" />
    </LinearLayout>



</RelativeLayout>

