<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_infor_est"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2F2"
    tools:context=".InforTanque" >

    <com.ramijemli.percentagechartview.PercentageChartView
        android:id="@+id/pcv_volumen"
        android:layout_width="146dp"
        android:layout_height="123dp"


        android:layout_below="@+id/txt_detalle"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="27dp"
        app:pcv_animDuration="800"
        app:pcv_animInterpolator="anticipate_overshoot"
        app:pcv_backgroundBarColor="#CCCCCC"
        app:pcv_backgroundBarThickness="10dp"
        app:pcv_mode="ring"
        app:pcv_orientation="clockwise"
        app:pcv_progress="60"
        app:pcv_progressBarThickness="15dp"
        app:pcv_startAngle="270" />

    <TextView
        android:id="@+id/text_encabezado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/nombre_estacion"
        android:textColor="#424040"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_encabezado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins"
        android:text="@string/infor_estacion" />

    <TextView
        android:id="@+id/txt_porcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pcv_volumen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/poppins"
        android:text="@string/porcentaje_volumen"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pcv_volumen"
        android:layout_marginTop="30dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Descripción acerca de la estacion 1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_plomo"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/txt_porcentBateria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_baseline_battery_full_24"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/txt_prctBateria" />

                <TextView
                    android:id="@+id/txt_porcentBateriaEst"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:text="90%" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_vInicial"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="7dp"
                    android:paddingTop="17dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="10dp"
                    android:text="@string/txt_volInicial" />

                <TextView
                    android:id="@+id/txt_vInicialEstacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:text="5 L" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_span="3"
                    android:layout_weight="4"
                    android:background="?android:attr/listDivider" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_vActual"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="7dp"
                    android:paddingTop="15dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="10dp"
                    android:text="@string/txt_volActual" />

                <TextView
                    android:id="@+id/txt_vActualEstacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:text="2.4 L" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="4"
                    android:background="?android:attr/listDivider"
                    android:paddingTop="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_ubicacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="7dp"
                    android:paddingTop="15dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="10dp"
                    android:text="@string/txt_ubicacion" />

                <TextView
                    android:id="@+id/txt_ubicacionEstacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="Guayaquil" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_span="2"
                    android:layout_weight="2"
                    android:background="?android:attr/listDivider" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_piso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="7dp"
                    android:paddingTop="15dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="10dp"
                    android:text="@string/txt_piso" />

                <TextView
                    android:id="@+id/txt_pisoEstacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="10dp"
                    android:text="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_span="2"
                    android:layout_weight="2"
                    android:background="?android:attr/listDivider" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_habitacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingLeft="7dp"
                    android:paddingTop="15dp"
                    android:paddingRight="7dp"
                    android:paddingBottom="25dp"
                    android:text="@string/txt_habitacion" />

                <TextView
                    android:id="@+id/txt_habitacionEstacion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="10dp"
                    android:text="505" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_verUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="2"
                    android:background="@drawable/btn_plomo_darker"
                    android:fontFamily="@font/poppins_medium"
                    android:onClick="verUbicacionTanque"
                    android:text="@string/ubicacionTanque"
                    android:textSize="13sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_editar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginBottom="60dp"
                    android:layout_weight="2"
                    android:background="?android:attr/textCursorDrawable"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/editar"
                    android:textSize="13sp" />


            </TableRow>



        </TableLayout>
    </ScrollView>

</RelativeLayout>